change new html header
Signed-off-by: jbetancourt <jmbetancourt@google.com>

--- a/html/sos.html
+++ b/html/sos.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <h1>Current Services (html read in)</h1> 
+  <h1>Current Services</h1> 
   <table style="width:100%">
   	<tr>
       	<th>Service</th>
