create centralized stylesheet for sos pages
Signed-off-by: jbetancourt <jmbetancourt@google.com>

--- a/pkg/sos/html/sos.html
+++ b/pkg/sos/html/sos.html
@@ -1,23 +1,12 @@
 <head>
-  <style>
-    table {
-      font-family: arial, sans-serif;
-      border-collapse: collapse;
-      width: 100%;
-    }
-    td, th {
-      border: 1px solid #dddddd;
-      text-align: left;
-      padding: 8px;
-    }
-  </style>
-  <script>
-  </script>
+  <title>Service of Services</title>
+  <link rel="stylesheet" href="stylesheet.css">
+  <meta charset="utf-8">
 </head>
 
 <body>
   <h1>Current Services</h1> 
-  <table style="width:100%">
+  <table style="width:50%">
   	<tr>
       	<th>Service</th>
       	<th>Port Number</th>
