Change refresh and connect button types and add link to banner
Signed-off-by: jbetancourt <jmbetancourt@google.com>

--- a/pkg/sos/html/sos.html
+++ b/pkg/sos/html/sos.html
@@ -6,7 +6,7 @@
 
 <body>
   <div class="banner">
-      <h1>Service of Services</h1>
+      <h1><a href="http://localhost:8000" target="_blank" class="bannerbtn">Service of Services</a></h1>
   </div>
   <div class="content">
     <div class="center">
