create new text input box for forms
Signed-off-by: jbetancourt <jmbetancourt@google.com>

--- a/pkg/sos/html/upspin.html
+++ b/pkg/sos/html/upspin.html
@@ -91,13 +91,13 @@
 			<h2 class="centernarrow">Upspin Config Settings</h2>
 			<div class="card">
 				<h3 class="label">Username</h3>
-				<input type="text" id="user"  class="text" value="{{$user}}">
+				<input type="text" id="user"  class="form" value="{{$user}}">
 				<h3 class="label">Dir Server</h3>
-				<input type="text" id="dir"   class="text" value="{{$dir}}">
+				<input type="text" id="dir"   class="form" value="{{$dir}}">
 				<h3 class="label">Store Server</h3>
-	      <input type="text" id="store" class="text" value="{{$store}}">
+	      <input type="text" id="store" class="form" value="{{$store}}">
 				<h3 class="label">Secret Seed</h3>
-	      <input type="text" id="seed"  class="text" value="{{$seed}}">
+	      <input type="text" id="seed"  class="form" value="{{$seed}}">
 			</div>
 			<input type="submit" id="button" class="button submitbtn">
 			<!--
